--- a/src/helloSwing/mainForm.form
+++ b/src/helloSwing/mainForm.form
@@ -16,9 +16,6 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="M&#xe3; h&#xf3;a c&#x1ed5; &#x111;i&#x1ec3;n_Chi&#x1ebf;n dz"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[640, 480]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -42,28 +39,37 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="cbo_list_item" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="btn_giai_ma" linkSize="1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btn_ma_hoa" linkSize="1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btn_clear" linkSize="1" alignment="0" max="32767" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="txt_output" min="-2" pref="224" max="-2" attributes="0"/>
+                  </Group>
                   <Group type="102" attributes="0">
-                      <Component id="cbo_list_item" linkSize="1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="65" max="32767" attributes="0"/>
-                      <Component id="label2" linkSize="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabel3" min="-2" pref="69" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="txt_matrix_key" min="-2" pref="212" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="8" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="txt_key" alignment="0" max="32767" attributes="0"/>
-                          <Component id="btn_giai_ma" linkSize="1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="btn_ma_hoa" linkSize="1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="btn_clear" linkSize="1" alignment="0" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jLabel2" alignment="0" min="-2" pref="37" max="-2" attributes="0"/>
+                          <Component id="label3" linkSize="2" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="label2" linkSize="2" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="label3" linkSize="2" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="txt_input" max="32767" attributes="0"/>
+                          <Component id="txt_key" max="32767" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="txt_input" min="-2" pref="233" max="-2" attributes="0"/>
-                  <Component id="txt_output" min="-2" pref="224" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -79,18 +85,27 @@
                   <Component id="label2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="txt_output" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="btn_ma_hoa" min="-2" max="-2" attributes="0"/>
-                  <Component id="label3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="btn_ma_hoa" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txt_key" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-              <Component id="btn_giai_ma" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="btn_giai_ma" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txt_output" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="label3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btn_clear" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-              <Component id="txt_key" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="136" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txt_matrix_key" min="-2" pref="138" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="33" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -99,15 +114,20 @@
     <Component class="javax.swing.JComboBox" name="cbo_list_item">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="5">
+          <StringArray count="7">
             <StringItem index="0" value="M&#xe3; h&#xf3;a Ceasar"/>
             <StringItem index="1" value="M&#xe3; h&#xf3;a &#x110;&#x1a1;n b&#x1ea3;ng"/>
             <StringItem index="2" value="M&#xe3; h&#xf3;a Vigenere"/>
             <StringItem index="3" value="M&#xe3; h&#xf3;a PlayFair"/>
             <StringItem index="4" value="M&#xe3; h&#xf3;a Hill"/>
+            <StringItem index="5" value="M&#xe3; h&#xf3;a Affine"/>
+            <StringItem index="6" value="M&#xe3; h&#xf3;a H&#xe0;ng"/>
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbo_list_itemActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
@@ -124,11 +144,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Gi&#x1ea3;i M&#xe3;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_giai_maActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btn_clear">
       <Properties>
         <Property name="text" type="java.lang.String" value="Clear"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_clearActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_input">
       <Events>
@@ -151,9 +177,34 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_key">
+      <Properties>
+        <Property name="horizontalAlignment" type="int" value="0"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_keyActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel2">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="key"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel3">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="matrix key"/>
+      </Properties>
+    </Component>
+    <Component class="java.awt.TextArea" name="txt_matrix_key">
+      <Properties>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Text Cursor"/>
+        </Property>
+        <Property name="rows" type="int" value="3"/>
+      </Properties>
+      <AccessibilityProperties>
+        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value=""/>
+        <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
+      </AccessibilityProperties>
     </Component>
   </SubComponents>
 </Form>
